fix: fix overflow of floating example sidebar

--- a/src/pages/examples/styles.module.css
+++ b/src/pages/examples/styles.module.css
@@ -69,7 +69,6 @@ h3 {
 .floatingSiderbar{
   position: fixed;
   overflow-y: auto;
-  height: 100vh;
   background-color: white;
 }
 
